# eduplat-backend

./: .dockerignore  Dockerfile  README.md  eduplat.db  pyproject.toml  requirements.txt  seed.py  seed_opportunities.py  seed_universities.py
app/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/models/: __init__.py  academic.py  extracurricular.py  opportunity.py  university.py  user.py
app/repositories/: __init__.py  academic_repository.py  base.py  extracurricular_repository.py  opportunity_repository.py  university_repository.py  user_repository.py
app/routers/: auth.py  motivation_letter.py  opportunities.py  profile.py  universities.py  users.py
app/schemas/: __init__.py  academic.py  auth.py  extracurricular.py  motivation_letter.py  opportunity.py  university.py  user.py
app/services/: __init__.py  auth_service.py  motivation_letter_service.py  opportunity_service.py  profile_service.py  university_service.py  user_service.py
