[project]
name = "eduplat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "argon2-cffi>=25.1.0",
    "fastapi==0.115.0",
    "openai>=2.28.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2>=2.9.11",
    "psycopg[binary]==3.3.3",
    "pydantic[email]==2.9.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
